added page layout for main Views

--- a/frontend/src/css/main.less
+++ b/frontend/src/css/main.less
@@ -23,3 +23,9 @@ html {
 // a {
 // 	text-decoration: none !important;
 // }
+
+.path-to-home {
+	text-align: center;
+	font-size: 30px;
+	width: 100%;
+}
