--- a/frontend/src/css/notes.less
+++ b/frontend/src/css/notes.less
@@ -1,26 +1,34 @@
-.notes {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	text-align: start;
-	margin: auto; 
-	height: 100vh;
-	// max-width: 20rem;
-	width: 100%;
+//
 
-	.title {
-		width: 100%;
+#notes {
+	.path-to-home {
+		margin: 1rem;
 	}
-	
-	.createNote {
-		border: 1px solid black;
-		background: black;
-		color: #ffff;
-		border-radius: 5px;
-		padding: 1rem;
-		max-width: 20rem;
+
+	.notes {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+		text-align: start;
+		margin: auto;
 		width: 100%;
-		// margin: 5px 0;
+
+		.createNote {
+			border: 1px solid black;
+			background: black;
+			color: #ffff;
+			border-radius: 5px;
+			padding: 1rem;
+			width: 100%;
+			// margin: 5px 0;
+		}
+
+		.noteFeed {
+			// 
+		}
 	}
-  }
+
+	.el-timeline {
+		padding: 0;
+	}
+}
