--- a/frontend/src/css/home.less
+++ b/frontend/src/css/home.less
@@ -1,24 +1,43 @@
 // 
 
-.feed-section {
+#home {
+	min-height: 100vh;
 	margin: auto;
-	width: 100%;
 
-	ul {
-		list-style: none;
+	.feed-section {
 		display: flex;
-		flex-wrap: wrap;
+		flex-direction: column;
+		align-items: center;
 		justify-content: center;
+		margin: auto;
+		padding: 10px;
 		width: 100%;
-		padding: 0;
-		margin: 0;
+	
+		ul {
+			list-style: none;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			flex-wrap: wrap;
+			justify-content: center;
+			width: 100%;
+			padding: 0;
+			margin: 0;
+		}
+	
+		.feed-options {
+			padding: 5rem;
+			// border: 1px solid black;
+			box-shadow: 0px 0px 12px rgba(0, 0, 0, .72);
+			margin: 15px 0;
+			text-align: center;
+			max-width: 30rem;
+			width: 100%;
+
+			a {
+				text-decoration: none;
+			}
+		}
 	}
 
-	.feed-options {
-		padding: 5rem;
-		border: 1px solid black;
-		margin: 1rem;
-		text-align: center;
-		width: 100%;
-	}
 }
