--- a/frontend/src/css/notes.less
+++ b/frontend/src/css/notes.less
@@ -1,30 +1,5 @@
 //
 
 #notes {
-	.path-to-home {
-		margin: 1rem;
-	}
-
-	.notes {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-evenly;
-		text-align: start;
-		margin: auto;
-		width: 100%;
-
-		.createNote {
-			border: 1px solid black;
-			background: black;
-			color: #ffff;
-			border-radius: 5px;
-			padding: 1rem;
-			width: 100%;
-			// margin: 5px 0;
-		}
-	}
-
-	.el-timeline {
-		padding: 0;
-	}
+// Just here so long
 }
