--- a/frontend/src/css/home.less
+++ b/frontend/src/css/home.less
@@ -26,10 +26,10 @@
 	
 		.feed-options {
 			padding: 5rem;
-			// border: 1px solid black;
 			box-shadow: 0px 0px 12px rgba(0, 0, 0, .72);
 			margin: 15px 0;
 			text-align: center;
+			font-size: 20px;
 			max-width: 30rem;
 			width: 100%;
 
