added placeholders for forms

--- a/frontend/src/css/main.less
+++ b/frontend/src/css/main.less
@@ -43,9 +43,8 @@ body {
 	}
 
 	.path-to-home {
-		text-align: center;
 		font-size: 30px;
-		width: 100%;
+		// width: 100%;
 	}
 
 	#register, #login {
