--- a/frontend/src/css/home.less
+++ b/frontend/src/css/home.less
@@ -30,6 +30,7 @@
 			margin: 15px 0;
 			text-align: center;
 			font-size: 20px;
+			border-radius: 10px;
 			max-width: 30rem;
 			width: 100%;
 
@@ -43,7 +44,7 @@
 				font-size: 25px;
 
 			}
-			
+
 		}
 	}
 }
